tests/errors/source/no_inputs.rs
use duplicate::*;
#[duplicate_item(

)]//duplicate_end
pub struct name(ty);
//item_end
